sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11:18: error: not found: value taille
    while (i+ecart<taille) 
                   ^